--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-native": "^0.63.4",
     "react-scripts": "4.0.1",
     "tachyons": "^4.12.0",
     "web-vitals": "^0.2.4"
